# traillink

./: .gitignore  Cargo.toml  README.md
base/: Cargo.toml
base/src/: claude.rs  laptop_location.rs  main.rs  web.html  web.rs
base/src/sdr/: hackrf.rs
deploy/: field.service
field/: Cargo.toml
field/src/: audio.rs  chat.html  main.rs  server.rs  state.rs  vox.rs
modem/: Cargo.toml
modem/src/: demodulator.rs  fec.rs  frame.rs  image.rs  lib.rs  location.rs  main.rs  modulator.rs  vox.rs
styles/: index.css
