[package]
name = "field"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
modem = { path = "../modem" }
